# knowledge-base

./: .docs-meta.json  .gitignore  AGENTS.md  CLAUDE.md  COMMERCIAL-LICENSE.md  INSTALL.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  status.json  vite.config.ts
.claude/: settings.json
.claude/commands/: check.md  command.md  dev-loop.md  dev.md  exp-to-framework.md  loop-gen.md  next.md  progress.md  release.md  start.md  sync-from-framework.md  update-docs.md
.claude/hooks/: pre-tool-use.js  skill-forced-eval.cjs  skill-forced-eval.js
.claude/skills/architecture-design/: SKILL.md
.claude/skills/brainstorm/: SKILL.md
.claude/skills/bug-detective/: SKILL.md
.claude/skills/code-patterns/: SKILL.md
.claude/skills/collaborating-with-codex/: SKILL.md
.claude/skills/database-ops/: SKILL.md
.claude/skills/docs-management/: SKILL.md
.claude/skills/file-storage/: SKILL.md
.claude/skills/git-workflow/: SKILL.md
.claude/skills/i18n-development/: SKILL.md
.claude/skills/project-init/: SKILL.md
.claude/skills/project-navigator/: SKILL.md
.claude/skills/release-publish/: SKILL.md
.claude/skills/security-permissions/: SKILL.md
.claude/skills/store-management/: SKILL.md
.claude/skills/task-tracker/: SKILL.md
.claude/skills/tauri-capabilities/: SKILL.md
.claude/skills/tauri-packaging/: SKILL.md
.claude/skills/tauri-plugins/: SKILL.md
.claude/skills/tauri-updater/: SKILL.md
.claude/skills/tauri-window-management/: SKILL.md
.claude/skills/tech-decision/: SKILL.md
.claude/skills/test-development/: SKILL.md
.claude/skills/ui-frontend/: SKILL.md
.codex/skills/git-workflow/: SKILL.md
.codex/skills/release-publish/: SKILL.md
.github/workflows/: release.yml
docs/: architecture.md  mcp-setup.md  skills-sync-tracker.md  tauri-rust-setup-guide.md  ui-design.md  video-publish-copy-v1.0.md  video-script-v1.0.md  产品介绍与报价说明.docx  产品介绍与报价说明.md  商业授权协议（合同模板）.docx  商业授权协议（合同模板）.md
docs/prototypes/tasks/: 01-list.html  02-kanban.html  03-calendar.html  04-create-modal.html  index.html
docs/tasks/: bilibili-feedback-tasks.md  mobile-migration-tasks.md  qq-group-feedback-tasks.md  sync-refactor-tasks.md
prototypes/: sidebar-activity-bar.html
scripts/: md2docx_intro.py
src/: App.tsx  Router.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json  push-popup.json
src-tauri/icons/: icon.icns
src-tauri/kb-core/: Cargo.toml
src-tauri/kb-core/src/: lib.rs
src-tauri/mcp/: test-folders.sh
src-tauri/mcp/src/: main.rs
src-tauri/resources/ocr/: README.md
src-tauri/src/: crash_handler.rs  error.rs  lib.rs  state.rs  tray.rs
src-tauri/src/commands/: ai.rs  attachment.rs  config.rs  daily.rs  data_dir.rs  export.rs  folders.rs  font.rs  image.rs  import.rs  links.rs  mcp.rs  mod.rs  notes.rs  pdf.rs  prompt.rs  push.rs  search.rs  shortcut.rs  source_file.rs  sync.rs  sync_v1.rs  system.rs  tags.rs  tasks.rs  template.rs  trash.rs  videos.rs
src-tauri/src/database/: ai.rs  folders.rs  links.rs  mod.rs  notes.rs  prompt.rs  push.rs  schema.rs  search.rs  sync.rs  sync_v1.rs  tags.rs  task_categories.rs  tasks.rs  templates.rs
src-tauri/src/models/: mod.rs
src-tauri/src/services/: ai.rs  asset_path.rs  config.rs  converter.rs  crypto.rs  daily.rs  data_dir.rs  excel_parser.rs  export.rs  export_html.rs  export_word.rs  folder.rs  http_client.rs  image.rs  image_download.rs  import.rs  import_attachments.rs  import_video_attachments.rs  links.rs  markdown.rs  mod.rs  note.rs  ocr.rs  pdf.rs  popout_window.rs  prompt.rs  quick_capture.rs  search.rs  shortcut.rs  skills.rs  source_file.rs  sync.rs  sync_scheduler.rs  sync_v1_scheduler.rs  tag.rs  task_reminder.rs  tasks.rs  template.rs  trash.rs  video.rs  (+1 more)
src-tauri/src/services/push/: dispatch.rs  mod.rs  scheduler.rs
src-tauri/src/services/sync_v1/: attachment_gc.rs  attachment_scan.rs  backend.rs  backend_local.rs  backend_s3.rs  backend_webdav.rs  lock.rs  manifest.rs  mod.rs  pull.rs  push.rs
src/components/: CreateNoteModal.tsx  FileTypeIcon.tsx  HomeSearchInput.tsx  ImportPreviewModal.tsx  MicButton.tsx  NewNoteButton.tsx  NewTodoButton.tsx  QuickCaptureAsrModal.tsx  TagColorPicker.tsx
src/components/ai/: AttachmentChip.tsx  DraftNoteModal.tsx  NoteAiDrawer.tsx  NoteImageRefs.tsx  PlanFromGoalModal.tsx  PlanTodayModal.tsx
src/components/config-share/: ShareConfigModal.tsx
src/components/editor/: AiWriteMenu.tsx  CodeBlockEnhanced.tsx  ColumnNodeView.tsx  Columns.ts  ColumnsNodeView.tsx  CompareClipboardButton.tsx  DiffMergeModal.tsx  EditorStats.tsx  EditorToolbar.tsx  FigureExtension.ts  MermaidPreview.tsx  SearchAndReplace.ts  SearchReplaceBar.tsx  TableBubbleMenu.tsx  TableButton.tsx  TextStyleExtras.ts  TiptapEditor.tsx  VideoNode.ts  VideoNodeView.tsx  VideoTimestamp.ts  VideoTimestampNodeView.tsx  WikiLinkDecoration.ts  WikiLinkSuggestion.ts  WikiLinkSuggestionList.tsx  markdownDiffUtil.ts  slashCommandItems.ts  useEditorContextMenu.tsx
src/components/layout/: ActivityBar.tsx  AppLayout.tsx  LayoutSwitch.tsx  SidePanel.tsx  Sidebar.tsx  TabBar.tsx  WindowControls.tsx
src/components/mobile/: ActionSheet.tsx
src/components/notes/: MindMapView.tsx  SlideshowView.tsx
src/components/settings/: DataDirSection.tsx  FeatureModulesSection.tsx  MCPServerSection.tsx  OrphanAssetsPanel.tsx  ShortcutsSection.tsx  SyncSection.tsx  SyncTabs.tsx  SyncV1Section.tsx
src/components/tasks/: CalendarView.tsx  KanbanView.tsx  (+6 more)
src/hooks/: useAutoSave.ts  useCommand.ts  useFeatureEnabled.ts  useIsMobile.ts  useKeyboardInset.ts  useLongPress.ts  useSearchSuggestions.ts  useSilenceAutoStop.ts  useUpdateChecker.ts
src/lib/: aiFilter.ts  assetUrl.ts  configShare.ts  exportPdf.ts  externalMdIntro.ts  highlight.tsx  noteCreator.tsx  notify.ts  printNote.ts  textStats.ts  utils.ts  wordImport.ts
src/store/: index.ts  tabs.ts
src/styles/: global.css  themes.css
src/theme/: tokens.ts
src/types/: index.ts
templates/docs-template/: .docs-meta.template.json  .gitignore  README.md  package.json
(+55 files in other folders)
