[package]
name = "knowledge_base"
version = "1.5.0"
description = "本地知识库桌面应用 - 全文搜索、双向链接、知识图谱"
authors = ["抓蛙师"]
edition = "2021"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "knowledge_base_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["sync", "fs", "io-util", "rt", "rt-multi-thread"] }
# T-024b S3 协议 backend：支持 AWS S3 / 阿里云 OSS / 腾讯云 COS / Cloudflare R2 / MinIO
# default-features = false 避免拉重型 tokio 依赖；用 tokio-rustls-tls + with-tokio
rust-s3 = { version = "0.34", default-features = false, features = ["tokio-rustls-tls"] }
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"
tauri-plugin-dialog = "2"
walkdir = "2"
pulldown-cmark = "0.13.1"
html2md = "0.2"
# T-009 OB 整库导入：解析 markdown 头部 YAML frontmatter（tags / aliases / 等）
serde_yml = "0.0.12"
# T-009 OB 整库导入：识别 markdown / OB-wiki 形式的图片引用（`![](...)` / `![[...]]`）
regex = "1"
base64 = "0.22.1"
pdf-extract = "0.9"
# PDFium fallback（Chrome 同款 PDF 引擎）：pdf-extract 对中文 CMap（GBK-EUC-H 等）不支持，
# 运行时动态加载 src-tauri/resources/pdfium/pdfium.dll 作为兜底
pdfium-render = "0.8"
# ─── 同步功能 ────────────────────────────────────
zip = "2.2"
sha2 = "0.10"
hostname = "0.4"
urlencoding = "2"
aes-gcm = "0.10"
# T-007 笔记加密：Argon2id 密码派生 + zeroize 在 drop 时清零敏感内存；rand 生成盐/nonce
argon2 = "0.5"
zeroize = { version = "1", features = ["zeroize_derive"] }
rand = "0.8"
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
# 全局快捷键 + 剪贴板：用于「后台运行时按 Ctrl+Shift+N 把剪贴板内容存为新笔记」
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
# Excel / ODS 解析（纯 Rust，零系统依赖；AI 智能规划"Excel 导入"模式用）
calamine = "0.28"
# T-020 笔记导出为 Word：纯 Rust 生成 .docx；零系统依赖
docx-rs = "0.4"
# T-027 .txt 导入：很多旧 txt 是 GBK / GB18030 / Big5，必须先嗅探编码再转 UTF-8
chardetng = "0.1"
encoding_rs = "0.8"

# ─── 编译优化 ────────────────────────────────────

[profile.dev]
opt-level = 0
incremental = true

[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
# 注意：不能设置 panic = "abort"，否则 html2md 的子依赖会因 panic 策略冲突编译失败

